<resources>
    <string name="app_name">Diet PI</string>
    <string name="title_home">Home</string>
    <string name="title_log">Log</string>
    <string name="title_goals">Goals</string>
    <string name="add_food">+ Add Food</string>
    <string name="today_s_intake">Today\'s Intake</string>
    <string name="carbohydrates_g">Carbohydrates (g)</string>
    <string name="carbs_g">Carbs (g)</string>
    <string name="calories_kcal">Calories (kcal)</string>
    <string name="calories">Calories</string>
    <string name="Blank">" "</string>
    <string name="food_name">Food Name</string>
    <string name="protein_g">Protein (g)</string>
    <string name="fat_g">Fat (g)</string>
    <string name="current_goal">Current Goal</string>
    <string name="progress_text_str">Current Progress:</string>
    <string name="streaks_text_str">Daily Streak:</string>
    <string name="add_goal_str">+ Add Goal</string>
    <string name="add_new_goal">Add New Goal</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="autofill_data">Autofill Data</string>
    <string name="food_quantity">Quantity</string>
    <string name="today_s_consumption">Today\'s Consumption:</string>
    <string name="first_name">First Name:</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="age">Age:</string>
    <string name="enter_age">Enter Age</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="user_details">User Details</string>
    <string name="height">Height:</string>
    <string name="enter_height">Enter Height</string>
    <string name="weight">Weight:</string>
    <string name="enter_weight">Enter Weight</string>
    <string name="update_details">Update Details</string>
    <string name="exit">Exit</string>
    <string name="i_prefer_not_to_say">I prefer not to say</string>
    <string name="date">Date</string>
    <string name="total_calories_kcal">Total Calories (kcal)</string>
    <string name="total_protein_g">Total Protein (g)</string>
    <string name="total_carbohydrates_g">Total Carbohydrates (g)</string>
    <string name="total_fat_g">Total Fat (g)</string>
    <string name="todays_intake">Today\'s Intake</string>
    <string name="last_14_days">Last 14 Days</string>
    <string name="_7_day_summary">7 Day Summary</string>
    <string-array name="macronutrients">
        <item>Calories (kcal)</item>
        <item>Fat (g)</item>
        <item>Carbs (g)</item>
        <item>Protein (g)</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
</resources>